Pull Request Pipeline (#3)
* pr pipe

* update maven logging

* fix maven warning

* fix clean